--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -2,7 +2,7 @@
 @use 'base/mixins' as m;
 
 .footer {
-    background-color: v.$blue-2;
+    background-color: v.$gray-4;
     padding: 1rem 0;
     color: v.$white;
     text-align: center;
