--- a/src/scss/layout/_index.scss
+++ b/src/scss/layout/_index.scss
@@ -1,5 +1,6 @@
 @forward 'header';
 @forward 'hero';
+@forward 'about';
 @forward 'features';
 @forward 'products';
 @forward 'testimoniales';
@@ -8,7 +9,4 @@
 @forward 'whatssapp';
 
 @forward 'main';
-
-@forward 'hero-herramientas';
-@forward 'hero-seguridad';
 @forward 'gallery';
