--- a/src/scss/layout/_features.scss
+++ b/src/scss/layout/_features.scss
@@ -4,6 +4,9 @@
 .features {
     background-color: v.$white;
     padding: 4rem 0;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
 
     &__grid {
         display: grid;
