--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -10,7 +10,7 @@
 
     /* PRIMER CONTACTO */
     &__info {
-        background-color: v.$blue-2;
+        background-color: v.$gray-4;
         display: flex;
         justify-content: space-between;
         color: v.$white;
@@ -88,17 +88,7 @@
         }
 
         &-img {
-            width: 6.5rem;
-        }
-
-        &-text {
-            color: v.$black;
-            font-weight: 700;
-            text-transform: uppercase;
-            font-size: 2.5rem;
-            font-family: v.$logo-font;
-            font-style: italic;
-            text-align: center;
+            width: 17rem;
         }
     }
 
@@ -174,7 +164,7 @@
         gap: 1rem;
 
         &-img {
-            width: 5rem;
+            width: 12rem;
         }
 
         &-text {
