creando secciones de productos

--- a/src/scss/layout/_index.scss
+++ b/src/scss/layout/_index.scss
@@ -9,4 +9,9 @@
 @forward 'whatssapp';
 
 @forward 'main';
+
+@forward 'hero-oficinas';
+@forward 'hero-dormitorios';
+@forward 'hero-edificios';
+@forward 'hero-contenedores';
 @forward 'gallery';
