--- a/src/scss/layout/_gallery.scss
+++ b/src/scss/layout/_gallery.scss
@@ -4,8 +4,10 @@
 .gallery {
     padding: 4rem 0;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 2rem;
 
     &__grid {
         display: grid;
