--- a/src/scss/layout/_hero.scss
+++ b/src/scss/layout/_hero.scss
@@ -49,6 +49,7 @@
         margin-bottom: 10px;
         color: v.$white;    
         line-height: 7rem;
+        text-transform: uppercase;
     }
 
     &__subtitle {
