agregando boton cambio de idioma y agregando json de lenguajes de index

--- a/src/scss/layout/_about.scss
+++ b/src/scss/layout/_about.scss
@@ -19,7 +19,7 @@
 
         @include m.phone {
             grid-template-columns: 1fr;
-            padding: 2rem;
+            padding: 4rem 1rem;
             width: 90%;
         }
     }
