agregando gulp-file-includes, modificando shema de paginas y agregando pagina trailas

--- a/src/scss/layout/_index.scss
+++ b/src/scss/layout/_index.scss
@@ -14,6 +14,7 @@
 @forward 'hero-dormitorios';
 @forward 'hero-edificios';
 @forward 'hero-contenedores';
+@forward 'hero-remolques';
 @forward 'gallery';
 
 @forward 'language';
